--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ede67825",
+   "id": "78b4515b",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deefcc37",
+   "id": "5caf3867",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97ed1005",
+   "id": "633a8130",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "66bcea91",
+   "id": "c15c9a20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a9e07e19",
+   "id": "65cc16b1",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c9d28fb3",
+   "id": "4140ba8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c88fff",
+   "id": "49febda7",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821e95ff",
+   "id": "3bb5b0f9",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aaa793f5",
+   "id": "f97187d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bf9d67f4",
+   "id": "eb5151c1",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "051db119",
+   "id": "10b58bbc",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6a64eac7",
+   "id": "5ffc90f9",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d6129e93",
+   "id": "3ce3dbd1",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a1651c72",
+   "id": "9ca1a855",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0a5649fa",
+   "id": "0e9fce91",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c573b714",
+   "id": "b8528811",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5c690569",
+   "id": "bc821315",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7abacb4",
+   "id": "bb9893c4",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "48f47af8",
+   "id": "46ef465b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "347a811c",
+   "id": "789f56e0",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2f48c175",
+   "id": "ea8a502c",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b1438c",
+   "id": "f3ad28fe",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6ab5d6c2",
+   "id": "85ad1b56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3f03cee9",
+   "id": "088a0be6",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5ae5b745",
+   "id": "81133a77",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0d706171",
+   "id": "ab61342d",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ba9a29df",
+   "id": "cb7df672",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0c6ad2a8",
+   "id": "d6a5fe2d",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "67fdd3a7",
+   "id": "a6696077",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "720cd378",
+   "id": "7d9855d4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a522cf63",
+   "id": "54059c5c",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d6b0a5f8",
+   "id": "d04387ce",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6dca5b6f",
+   "id": "af35ed32",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f9b0cac3",
+   "id": "a2c5011e",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "610809ae",
+   "id": "3a868c31",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69109c50",
+   "id": "d5621a35",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "52718110",
+   "id": "9db11f6b",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a48c1077",
+   "id": "f8b2987b",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3149c125",
+   "id": "74acf838",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bfaf21eb",
+   "id": "61824c12",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88e336a3",
+   "id": "b2deb2b6",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "61a66ed3",
+   "id": "ca39e344",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "895c0081",
+   "id": "49d15bda",
    "metadata": {},
    "outputs": [
     {
@@ -1043,12 +1043,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e90608b",
+   "id": "227b7180",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
     "\n",
-    "Sometimes, we don't know what we're going to want to accumulate, but we do want to count it. For example, let's say that I want to know how many times each letter appears in a book. I can use paradigm 2, set up a dict with a-z as keys, and then count how many times each ap"
+    "Sometimes, we don't know what we're going to want to accumulate, but we do want to count it. For example, let's say that I want to know how many times each letter appears in a book. I can use paradigm 2, set up a dict with a-z as keys, and then count how many times each appears.\n",
+    "\n",
+    "But if I want to count words, I'm not going to use paradigm 2, going through the whole article or book, creating a key-value pair for each unique words, and then iterating through it again, and accumulating.\n",
+    "\n",
+    "In such cases, we can create an empty dict at the start of the program and then populate it -- keys and values alike -- as we encounter them. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1d45fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example: letter frequencies\n",
+    "\n",
+    "counts = {}   # empty dict\n",
+    "\n",
+    "s = input('Enter a string: ').strip()\n",
+    "\n",
+    "for one_character in s:\n",
+    "    counts[one_character] += 1\n",
+    "    "
    ]
   }
  ],
